# book_forge

./: .gitignore  BookForge.toml  Cargo.toml  README.md  database.db
.github/workflows/: analyze.yml
entity/: Cargo.toml
entity/src/: book.rs  lib.rs  mod.rs  prelude.rs  user.rs
locales/: en.yml  fr-FR.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20251003_201722_create_book.rs  m20251005_155123_create_users.rs  m20251021_202920_add_authors_to_book.rs
migrations/2025-08-12-101111_create_users/: up.sql
migrations/2025-08-12-185143_create_books_and_authors/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  repository.rs  schema.rs
src/config/: mod.rs
src/handlers/: books.rs  books_handler.rs  helpers.rs  mod.rs  users.rs  users_handler.rs
src/helpers/: errors.rs  filters.rs  mod.rs
src/repositories/: author_repository.rs  book_repository.rs  mod.rs  user_repository.rs
src/services/: errors.rs  mod.rs  open_library.rs
src/services/api/: mod.rs  open_library.rs
src/templates/: _base.html  book_card.html  user_card.html
src/templates/users/: index.html
templates/: _base.html  _navbar.html  book_card.html  index.html
templates/assets/stylesheets/: main.css
templates/books/: edit.html  new.html  show.html
templates/users/: edit.html  index.html
tests/: book_test.rs  common_test.rs  integration_test.rs  user_test.rs
tests/common/: mod.rs  seed_data.rs  setup_test.rs
