[package]
name = "book_forge"
version = "0.1.0"
description = "Self-hosted shared library management system"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = {version = "0.7"}
tokio = { version = "1.0", features = ["full"] }
askama = "0.14.0"
