[package]
name = "book_forge"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
dotenvy = "0.15"
askama = "0.14.0"
axum = {version = "0.7"}
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
